fix some SolverTests